--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
-<img src="nsa.jpg">
-
-Ayrıca, ensar vakfının tüm sitelerinin veritabanı csv dumpını twitterdan paylaştım. Tüm çalışanların listesi gibi veriler dahil!
-Twitter: @anon64436
+<html>
+<head>
+<style>
+body {
+    color: white;
+    font-size:30pt;
+    background-color: black;
+    text-align:center;
+}
+</style>
+</head>
+<body>
+<p>
+Çocuk istismarına göz yuman ve hatta bu istismarı örtpas etmeye çalışan ensar vakfı bir anonim hacker tarafından hacklenmiştir.
+</p>
+<hr>
+<p>
+Ayrıca, ensar vakfının tüm sitelerinin veritabanı csv dumpını twitterdan paylaştım. Tüm çalışanların listesi gibi verilerde bunun içerisinde.
+</p>
+<p>
+Twitter:@anon64436
+</p>
+</body>
+</html>
